add comment to uiwebview example

--- a/examples/uiwebview/JavaScript WebView/index.html
+++ b/examples/uiwebview/JavaScript WebView/index.html
@@ -32,6 +32,7 @@
         
         <button id="plaidLinkButton">Open Plaid Link</button>
 
+        <!-- The link-initialize script is loaded from the <body>, not <head> -->
         <script src="https://cdn.plaid.com/link/stable/link-initialize.js"></script>
         <script>
             var appScheme = 'linkApp';
